--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -58,9 +58,6 @@
 <td><a href="com/whirled/contrib/platformer/game/AttackController.html"><i>AttackController</i></a></td>
 </tr>
 <tr>
-<td><a href="com/whirled/contrib/simplegame/audio/Audio.html">Audio</a></td>
-</tr>
-<tr>
 <td><a href="com/whirled/contrib/simplegame/audio/AudioChannel.html">AudioChannel</a></td>
 </tr>
 <tr>
@@ -131,6 +128,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/avrg/probe/ButtonEvent.html">ButtonEvent</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/display/CacheWrapper.html">CacheWrapper</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/avrg/probe/CallbackParameter.html">CallbackParameter</a></td>
@@ -214,6 +214,9 @@
 <td><a href="com/whirled/contrib/platformer/editor/ComboDetail.html">ComboDetail</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/simplegame/Config.html">Config</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/Configurator.html">Configurator</a></td>
 </tr>
 <tr>
@@ -251,6 +254,12 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/editor/Detail.html">Detail</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/display/DisplayUtils.html">DisplayUtils</a></td>
+</tr>
+<tr>
+<td><a href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/piece/Dynamic.html">Dynamic</a></td>
@@ -742,6 +751,9 @@
 <td><a href="com/whirled/contrib/platformer/game/SetGateEventAction.html">SetGateEventAction</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/simplegame/SGContext.html">SGContext</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/game/ShootableController.html"><i>ShootableController</i></a></td>
 </tr>
 <tr>
@@ -776,6 +788,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/board/SimpleBounds.html"><i>SimpleBounds</i></a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/simplegame/SimpleGame.html">SimpleGame</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/simplegame/objects/SimpleSceneObject.html">SimpleSceneObject</a></td>
