--- a/pages/code/contrib/asdocs/all-index-B.html
+++ b/pages/code/contrib/asdocs/all-index-B.html
@@ -563,6 +563,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("BÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#_bounds">_bounds</a> &mdash; Property in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/components/class-list.html');" href="com/whirled/contrib/simplegame/components/BoundsComponent.html"><i>BoundsComponent</i></a> &mdash; Interface in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/components/class-list.html');" href="com/whirled/contrib/simplegame/components/package-detail.html">com.whirled.contrib.simplegame.components</a></td>
 </tr>
 <tr>
