--- a/pages/code/contrib/asdocs/all-index-F.html
+++ b/pages/code/contrib/asdocs/all-index-F.html
@@ -176,6 +176,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("FÂ
       callback evaluates to true.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html#_filter">_filter</a> &mdash; Property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html">CacheWrapper</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/ObjectDB.html#finalizeObjectRemoval()">finalizeObjectRemoval</a>(obj:<a href="com/whirled/contrib/simplegame/SimObject.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame./class-list.html');">com.whirled.contrib.simplegame:SimObject</a>) &mdash; Method in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/ObjectDB.html">ObjectDB</a></td>
 </tr>
 <tr>
