--- a/pages/code/contrib/asdocs/all-index-G.html
+++ b/pages/code/contrib/asdocs/all-index-G.html
@@ -385,12 +385,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
      Get the value of the cookie parameter identified by name.</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#get()">get</a>(resourceName) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Table.html#getAbsoluteFromId()">getAbsoluteFromId</a>(id) &mdash; Method in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/Table.html">Table</a></td>
 </tr>
 <tr>
@@ -492,7 +486,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getBitmapData()">getBitmapData</a>(resourceName, className, width, height) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getBitmapData()">getBitmapData</a>(rsrcs:<a href="com/whirled/contrib/simplegame/resource/ResourceManager.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource./class-list.html');">com.whirled.contrib.simplegame.resource:ResourceManager</a>, resourceName, className, width, height) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -688,7 +682,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getClass()">getClass</a>(resourceName, className) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getClass()">getClass</a>(rsrcs:<a href="com/whirled/contrib/simplegame/resource/ResourceManager.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource./class-list.html');">com.whirled.contrib.simplegame.resource:ResourceManager</a>, resourceName, className) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1716,7 +1710,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
      Returns a String typped parameter for use in the cookieDef argument to getCookie().</td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getSwfDisplayRoot()">getSwfDisplayRoot</a>(resourceName) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getSwf()">getSwf</a>(rsrcs:<a href="com/whirled/contrib/simplegame/resource/ResourceManager.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource./class-list.html');">com.whirled.contrib.simplegame.resource:ResourceManager</a>, resourceName) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html#getSwfDisplayRoot()">getSwfDisplayRoot</a>(rsrcs:<a href="com/whirled/contrib/simplegame/resource/ResourceManager.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource./class-list.html');">com.whirled.contrib.simplegame.resource:ResourceManager</a>, resourceName) &mdash; Static method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/SwfResource.html">SwfResource</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1844,7 +1844,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html#getTimeLeft()">getTimeLeft</a>(timerName) &mdash; Static method in class com.whirled.contrib.simplegame.objects.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html">SimpleTimer</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html#getTimeLeft()">getTimeLeft</a>(mainLoop:<a href="com/whirled/contrib/simplegame/MainLoop.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame./class-list.html');">com.whirled.contrib.simplegame:MainLoop</a>, timerName) &mdash; Static method in class com.whirled.contrib.simplegame.objects.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html">SimpleTimer</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1980,19 +1980,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#g_instance">g_instance</a> &mdash; Static property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/AudioManager.html#g_instance">g_instance</a> &mdash; Static property in class com.whirled.contrib.simplegame.audio.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/AudioManager.html">AudioManager</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html#g_instance">g_instance</a> &mdash; Static property in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html">ResourceManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/package-detail.html">ghostbusters.client</a> &mdash; Package</td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -2047,6 +2035,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("GÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/tasks/class-list.html');" href="com/whirled/contrib/simplegame/tasks/GoToFrameTask.html#GoToFrameTask()">GoToFrameTask</a>(frame, scene, gotoAndPlay, movie) &mdash; Constructor in class com.whirled.contrib.simplegame.tasks.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/tasks/class-list.html');" href="com/whirled/contrib/simplegame/tasks/GoToFrameTask.html">GoToFrameTask</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#_grab">_grab</a> &mdash; Property in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
