--- a/pages/code/contrib/asdocs/all-index-H.html
+++ b/pages/code/contrib/asdocs/all-index-H.html
@@ -194,6 +194,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("HÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#handleEnteredRoom()">handleEnteredRoom</a>(evt) &mdash; Method in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#handleFrame()">handleFrame</a>(evt) &mdash; Method in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/FunctionPanel.html#handleFunctionClick()">handleFunctionClick</a>(evt:<a href="com/whirled/contrib/avrg/probe/ButtonEvent.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe./class-list.html');">com.whirled.contrib.avrg.probe:ButtonEvent</a>) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/FunctionPanel.html">FunctionPanel</a></td>
 </tr>
 <tr>
@@ -274,6 +286,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("HÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Button.html#handleMouseClick()">handleMouseClick</a>(event) &mdash; Method in class com.whirled.contrib.avrg.probe.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/probe/class-list.html');" href="com/whirled/contrib/avrg/probe/Button.html">Button</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#handleMouseDown()">handleMouseDown</a>(evt) &mdash; Method in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#handleMouseUp()">handleMouseUp</a>(evt) &mdash; Method in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -388,6 +412,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("HÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html#handleShotAdded()">handleShotAdded</a>(shot:<a href="com/whirled/contrib/platformer/piece/Shot.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece./class-list.html');">com.whirled.contrib.platformer.piece:Shot</a>, group) &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html">GameController</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html#handleSizeChanged()">handleSizeChanged</a>(evt) &mdash; Method in class ghostbusters.client.<a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/DraggableSprite.html">DraggableSprite</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -832,6 +862,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("HÂ
 </tr>
 <tr>
 <td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/Config.html#hostSprite">hostSprite</a> &mdash; Property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/Config.html">Config</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> The Sprite that is hosting this SimpleGame.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#_hostSprite">_hostSprite</a> &mdash; Property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
