--- a/pages/code/contrib/asdocs/all-index-R.html
+++ b/pages/code/contrib/asdocs/all-index-R.html
@@ -381,7 +381,31 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html#recolor()">recolor</a>(node, filter) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html">CacheWrapper</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html#_recolor">_recolor</a> &mdash; Property in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html">CacheWrapper</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DisplayUtils.html#recolorNodes()">recolorNodes</a>(node, disp, filter) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DisplayUtils.html">DisplayUtils</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSprite.html#recolorNodes()">recolorNodes</a>(node, disp, filter) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DynamicSprite.html">DynamicSprite</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DisplayUtils.html#recolorNodesToColor()">recolorNodesToColor</a>(node, disp, color) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/DisplayUtils.html">DisplayUtils</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -978,6 +1002,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html#reset()">reset</a>(... rest) &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html">CacheWrapper</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/BounceCollisionHandler.html#reset()">reset</a>() &mdash; Method in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/BounceCollisionHandler.html">BounceCollisionHandler</a></td>
 </tr>
 <tr>
@@ -1032,6 +1062,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html#resetOnComplete()">resetOnComplete</a>() &mdash; Method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/CacheWrapper.html">CacheWrapper</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/BoardEditSprite.html#resetPieceLayer()">resetPieceLayer</a>() &mdash; Method in class com.whirled.contrib.platformer.editor.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/BoardEditSprite.html">BoardEditSprite</a></td>
 </tr>
 <tr>
@@ -1081,7 +1117,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html#ResourceManager()">ResourceManager</a>() &mdash; Constructor in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html">ResourceManager</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html#ResourceManager()">ResourceManager</a>(ctx:<a href="com/whirled/contrib/simplegame/SGContext.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame./class-list.html');">com.whirled.contrib.simplegame:SGContext</a>) &mdash; Constructor in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ResourceManager.html">ResourceManager</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1160,6 +1196,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/AudioControls.html#retain()">retain</a>() &mdash; Method in class com.whirled.contrib.simplegame.audio.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/AudioControls.html">AudioControls</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html#returnCacheClip()">returnCacheClip</a>(cw:<a href="com/whirled/contrib/platformer/display/CacheWrapper.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display./class-list.html');">com.whirled.contrib.platformer.display:CacheWrapper</a>) &mdash; Static method in class com.whirled.contrib.platformer.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/PieceSpriteFactory.html">PieceSpriteFactory</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1281,6 +1323,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/SGContext.html#rsrcs">rsrcs</a> &mdash; Property in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/SGContext.html">SGContext</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/PlatformerController.html#run()">run</a>() &mdash; Method in class com.whirled.contrib.platformer.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/PlatformerController.html">PlatformerController</a></td>
 </tr>
 <tr>
@@ -1352,6 +1400,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <tr>
 <td width="20"></td><td>
      Kicks off the MainLoop.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/SimpleGame.html#run()">run</a>() &mdash; Method in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/SimpleGame.html">SimpleGame</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html#run()">run</a>() &mdash; Method in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html">OfflineTickedMessageManager</a></td>
