--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/BoardSprite.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/BoardSprite.html
@@ -208,7 +208,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#addParticleEffect()">addParticleEffect</a>(disp:DisplayObject, pt:Point, back:Boolean):void</div>
+<a class="signatureLink" href="#addParticleEffect()">addParticleEffect</a>(cw:<a href="CacheWrapper.html">CacheWrapper</a>, pt:Point, back:Boolean):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">BoardSprite</td>
 </tr>
@@ -476,10 +476,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected function addParticleEffect(disp:DisplayObject, pt:Point, back:Boolean):void</code><span class="label">Parameters</span>
+<code>protected function addParticleEffect(cw:<a href="CacheWrapper.html">CacheWrapper</a>, pt:Point, back:Boolean):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20px"></td><td><code><span class="label">disp</span>:DisplayObject</code></td>
+<td width="20px"></td><td><code><span class="label">cw</span>:<a href="CacheWrapper.html">CacheWrapper</a></code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
