--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/class-list.html
@@ -49,7 +49,13 @@
 <td><a href="BoundedPieceSprite.html">BoundedPieceSprite</a></td>
 </tr>
 <tr>
+<td><a href="CacheWrapper.html">CacheWrapper</a></td>
+</tr>
+<tr>
 <td><a href="DestructableGateSprite.html">DestructableGateSprite</a></td>
+</tr>
+<tr>
+<td><a href="DisplayUtils.html">DisplayUtils</a></td>
 </tr>
 <tr>
 <td><a href="DynamicSprite.html">DynamicSprite</a></td>
