--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/package-detail.html
@@ -74,7 +74,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="BoundedPieceSprite.html">BoundedPieceSprite</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="CacheWrapper.html">CacheWrapper</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DestructableGateSprite.html">DestructableGateSprite</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DisplayUtils.html">DisplayUtils</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DynamicSprite.html">DynamicSprite</a></td><td class="summaryTableLastCol">&nbsp;</td>
