--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/Updatable.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/Updatable.html
@@ -40,6 +40,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("In
 <tr>
 <td class="classHeaderTableLabel">Subinterfaces</td><td><a href="net/TickedMessageManager.html">TickedMessageManager</a></td>
 </tr>
+<tr>
+<td class="classHeaderTableLabel">Implementors</td><td><a href="audio/AudioManager.html">AudioManager</a>, <a href="../simplegame/ObjectDB.html">ObjectDB</a></td>
+</tr>
 </table>
 <p></p>
 <p></p>
