--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/class-list.html
@@ -31,6 +31,9 @@
 <td><a href="AppMode.html">AppMode</a></td>
 </tr>
 <tr>
+<td><a href="Config.html">Config</a></td>
+</tr>
+<tr>
 <td><a href="MainLoop.html">MainLoop</a></td>
 </tr>
 <tr>
@@ -40,10 +43,16 @@
 <td><a href="ObjectMessage.html">ObjectMessage</a></td>
 </tr>
 <tr>
+<td><a href="SGContext.html">SGContext</a></td>
+</tr>
+<tr>
 <td><a href="SimObject.html">SimObject</a></td>
 </tr>
 <tr>
 <td><a href="SimObjectRef.html">SimObjectRef</a></td>
+</tr>
+<tr>
+<td><a href="SimpleGame.html">SimpleGame</a></td>
 </tr>
 </table>
 </body>
