--- a/pages/code/contrib/asdocs/package-list.html
+++ b/pages/code/contrib/asdocs/package-list.html
@@ -149,7 +149,12 @@
 </td>
 </tr>
 <tr>
-<td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/package-detail.html">com.whirled.contrib.simplegame.util</a></td>
+<td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/package-detail.html">com.whirled.contrib.simplegame.util</a>
+<br>
+</td>
+</tr>
+<tr>
+<td><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/package-detail.html">ghostbusters.client</a></td>
 </tr>
 </table>
 </body>
