--- a/pages/code/contrib/asdocs/package-summary.html
+++ b/pages/code/contrib/asdocs/package-summary.html
@@ -119,6 +119,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Al
 <tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/package-detail.html">com.whirled.contrib.simplegame.util</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('ghostbusters/client/class-list.html');" href="ghostbusters/client/package-detail.html">ghostbusters.client</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
 </table>
 <p></p>
 <center class="copyright">
