--- a/pages/code/asdocs/com/whirled/DataPack.html
+++ b/pages/code/asdocs/com/whirled/DataPack.html
@@ -245,6 +245,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedProtectedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="BaseDataPack.html#getDatum()">getDatum</a>(list:XMLList, name:String):XML</div>
+<div class="summaryTableDescription">
+     Fucking hell.</div>
+</td><td class="summaryTableOwnerCol"><a href="BaseDataPack.html">BaseDataPack</a></td>
+</tr>
+<tr class="hideInheritedProtectedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="BaseDataPack.html#parseValueFromString()">parseValueFromString</a>(string:String, type:String):Object</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="BaseDataPack.html">BaseDataPack</a></td>
