--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/ParticleLayer.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/ParticleLayer.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="ParticleLayer,com.whirled.contrib.platformer.display.ParticleLayer,BUFFER,addParticleEffect,effectComplete" name="keywords">
+<meta content="ParticleLayer,com.whirled.contrib.platformer.display.ParticleLayer,BUFFER,addParticleEffect" name="keywords">
 <title>com.whirled.contrib.platformer.display.ParticleLayer</title>
 </head>
 <body>
@@ -85,7 +85,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#addParticleEffect()">addParticleEffect</a>(disp:DisplayObject, pt:Point):void</div>
+<a class="signatureLink" href="#addParticleEffect()">addParticleEffect</a>(cw:<a href="CacheWrapper.html">CacheWrapper</a>, pt:Point):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">ParticleLayer</td>
 </tr>
@@ -95,22 +95,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a class="signatureLink" href="Layer.html#update()">update</a>(nX:Number, nY:Number, scale:Number = 1):void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol"><a href="Layer.html">Layer</a></td>
-</tr>
-</table>
-</div>
-<a name="protectedMethodSummary"></a>
-<div class="summarySection">
-<div class="summaryTableTitle">Protected Methods</div>
-<table id="summaryTableProtectedMethod" class="summaryTable " cellpadding="3" cellspacing="0">
-<tr>
-<th>&nbsp;</th><th colspan="2">Method</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
-<div class="summarySignature">
-<a class="signatureLink" href="#effectComplete()">effectComplete</a>(event:Event):void</div>
-<div class="summaryTableDescription"></div>
-</td><td class="summaryTableOwnerCol">ParticleLayer</td>
 </tr>
 </table>
 </div>
@@ -141,30 +125,16 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function addParticleEffect(disp:DisplayObject, pt:Point):void</code><span class="label">Parameters</span>
+<code>public function addParticleEffect(cw:<a href="CacheWrapper.html">CacheWrapper</a>, pt:Point):void</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20px"></td><td><code><span class="label">disp</span>:DisplayObject</code></td>
+<td width="20px"></td><td><code><span class="label">cw</span>:<a href="CacheWrapper.html">CacheWrapper</a></code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">pt</span>:Point</code></td>
-</tr>
-</table>
-</div>
-<a name="effectComplete()"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">effectComplete</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>protected function effectComplete(event:Event):void</code><span class="label">Parameters</span>
-<table border="0" cellspacing="0" cellpadding="0">
-<tr>
-<td width="20px"></td><td><code><span class="label">event</span>:Event</code></td>
 </tr>
 </table>
 </div>
