--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/PieceSpriteFactory.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/display/PieceSpriteFactory.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="PieceSpriteFactory,com.whirled.contrib.platformer.display.PieceSpriteFactory,_contentDomain,_defaultDynamicSprite,_defaultPieceSprite,_duplicate,_instanceMap,_spriteMap,addDynamicClass,addPieceClass,blockShape,getDynamicSprite,getPieceSprite,init,initClasses,initZip,instantiateClip,instantiateDClip,instantiatePClip" name="keywords">
+<meta content="PieceSpriteFactory,com.whirled.contrib.platformer.display.PieceSpriteFactory,_clipCache,_contentDomain,_defaultDynamicSprite,_defaultPieceSprite,_duplicate,_instanceMap,_spriteMap,addDynamicClass,addPieceClass,blockShape,getDynamicSprite,getPieceSprite,init,initClasses,initZip,instantiateClip,instantiateDClip,instantiatePClip,loadCacheClip,returnCacheClip" name="keywords">
 <title>com.whirled.contrib.platformer.display.PieceSpriteFactory</title>
 </head>
 <body>
@@ -50,6 +50,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableProtectedProperty" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_clipCache">_clipCache</a> : Object<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_contentDomain">_contentDomain</a> : ApplicationDomain<div class="summaryTableDescription">[static]</div>
@@ -163,6 +167,21 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#loadCacheClip()">loadCacheClip</a>(name:String):<a href="../display/CacheWrapper.html">CacheWrapper</a>
+</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#returnCacheClip()">returnCacheClip</a>(cw:<a href="CacheWrapper.html">CacheWrapper</a>):void</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">PieceSpriteFactory</td>
+</tr>
 </table>
 </div>
 <script type="text/javascript" language="javascript">
@@ -172,10 +191,19 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
+<a name="_clipCache"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_clipCache</td><td class="detailHeaderType">property</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected static var _clipCache:Object</code>
+</div>
 <a name="_contentDomain"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_contentDomain</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_contentDomain</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -487,6 +515,41 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code>DisplayObject</code></td>
+</tr>
+</table>
+</div>
+<a name="loadCacheClip()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">loadCacheClip</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function loadCacheClip(name:String):<a href="../display/CacheWrapper.html">CacheWrapper</a></code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code><a href="../display/CacheWrapper.html">CacheWrapper</a></code></td>
+</tr>
+</table>
+</div>
+<a name="returnCacheClip()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">returnCacheClip</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function returnCacheClip(cw:<a href="CacheWrapper.html">CacheWrapper</a>):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">cw</span>:<a href="CacheWrapper.html">CacheWrapper</a></code></td>
 </tr>
 </table>
 </div>
