--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/TrophyProperty.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/persist/TrophyProperty.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="TrophyProperty,com.whirled.contrib.platformer.persist.TrophyProperty,_gameCtrl,value,awardTrophy,hasTrophy" name="keywords">
+<meta content="TrophyProperty,com.whirled.contrib.platformer.persist.TrophyProperty,_awardedThisSession,_gameCtrl,value,awardTrophy,hasTrophy" name="keywords">
 <title>com.whirled.contrib.platformer.persist.TrophyProperty</title>
 </head>
 <body>
@@ -87,6 +87,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_awardedThisSession">_awardedThisSession</a> : Boolean = false<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">TrophyProperty</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_gameCtrl">_gameCtrl</a> : GameControl<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">TrophyProperty</td>
 </tr>
@@ -133,10 +137,19 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
+<a name="_awardedThisSession"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_awardedThisSession</td><td class="detailHeaderType">property</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _awardedThisSession:Boolean = false</code>
+</div>
 <a name="_gameCtrl"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">_gameCtrl</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
