--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Actor.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Actor.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Actor,com.whirled.contrib.platformer.piece.Actor,ACT_COUNT,HIT_BACK,HIT_BIG,HIT_FRONT,ORIENT_LEFT,ORIENT_RIGHT,ORIENT_SHOOT_B,ORIENT_SHOOT_D,ORIENT_SHOOT_F,ORIENT_SHOOT_MASK,ORIENT_SHOOT_U,ORIENT_TURNING,U_ACCEL,U_HEALTH,U_HIT,U_ORIENT,U_SHOOT,_accelX,_accelY,_attached,_attachedId,_bounds,_health,_height,_justShot,_orient,_shooting,_wasHit,_width,events,maxAttachable,maxWalkable,projCollider,startHealth,accelX,accelY,attached,attachedId,health,height,justShot,orient,shooting,wasHit,width,doesHit,fromBytes,getBounds,isOrientShootDown,isOrientShootUp,orientBody,orientShoot,setAttached,shouldSpawn,toBytes,toString" name="keywords">
+<meta content="Actor,com.whirled.contrib.platformer.piece.Actor,ACT_COUNT,HIT_BACK,HIT_BIG,HIT_FRONT,ORIENT_LEFT,ORIENT_RIGHT,ORIENT_SHOOT_B,ORIENT_SHOOT_D,ORIENT_SHOOT_F,ORIENT_SHOOT_MASK,ORIENT_SHOOT_U,ORIENT_TURNING,U_ACCEL,U_ATTACH,U_HEALTH,U_HIT,U_ORIENT,U_SHOOT,U_UPGRADE,_accelX,_accelY,_attached,_attachedId,_bounds,_health,_height,_justShot,_orient,_shooting,_startHealth,_wasHit,_width,events,maxAttachable,maxWalkable,projCollider,accelX,accelY,attached,attachedId,health,height,justShot,orient,shooting,startHealth,wasHit,width,doesHit,fromBytes,getBounds,isOrientShootDown,isOrientShootUp,orientBody,orientShoot,setAttached,shouldSpawn,toBytes,toString" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Actor</title>
 </head>
 <body>
@@ -198,7 +198,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_attachedId">_attachedId</a> : int<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_attachedId">_attachedId</a> : int = -1<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
@@ -247,6 +247,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_startHealth">_startHealth</a> : Number<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_wasHit">_wasHit</a> : int<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
@@ -277,6 +281,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a class="signatureLink" href="#Actor()">Actor</a>(insxml:XML = null)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="hideInheritedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="Dynamic.html#alwaysSpawn()">alwaysSpawn</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
 </tr>
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
@@ -423,7 +434,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Constant</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#ACT_COUNT">ACT_COUNT</a> : int = 7<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#ACT_COUNT">ACT_COUNT</a> : int = 9<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="hideInheritedConstant">
@@ -511,6 +522,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_ATTACH">U_ATTACH</a> : int<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_HEALTH">U_HEALTH</a> : int<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
@@ -532,6 +547,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_SHOOT">U_SHOOT</a> : int<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_UPGRADE">U_UPGRADE</a> : int<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
 <tr class="hideInheritedConstant">
@@ -621,7 +640,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>protected var _attachedId:int</code>
+<code>protected var _attachedId:int = -1</code>
 </div>
 <a name="attachedId"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -795,6 +814,15 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function set shooting(value:Boolean):void</code>
 <br>
 </div>
+<a name="_startHealth"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_startHealth</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _startHealth:Number</code>
+</div>
 <a name="startHealth"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -802,7 +830,12 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public var startHealth:Number</code>
+<code>startHealth:Number</code>&nbsp;&nbsp;[read-write]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get startHealth():Number</code>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function set startHealth(value:Number):void</code>
+<br>
 </div>
 <a name="_wasHit"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -1073,7 +1106,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static const ACT_COUNT:int = 7</code>
+<code>public static const ACT_COUNT:int = 9</code>
 </div>
 <a name="HIT_BACK"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -1183,6 +1216,15 @@ showHideInherited();
 <div class="detailBody">
 <code>public static const U_ACCEL:int</code>
 </div>
+<a name="U_ATTACH"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">U_ATTACH</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const U_ATTACH:int</code>
+</div>
 <a name="U_HEALTH"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -1218,6 +1260,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public static const U_SHOOT:int</code>
+</div>
+<a name="U_UPGRADE"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">U_UPGRADE</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const U_UPGRADE:int</code>
 </div>
 <br>
 <br>
