--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Dynamic.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Dynamic.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Dynamic,com.whirled.contrib.platformer.piece.Dynamic,DEAD,DYN_COUNT,ENEMY,GLOBAL,OWN_ALL,OWN_PLAYER,OWN_SERVER,PLAYER,SPAWN,U_INTER,U_POS,U_VEL,_dx,_dy,_inState,_inter,_owner,id,sprite,updateState,x,y,dx,dy,enemyCount,inter,owner,amOwner,equals,fromBytes,getBounds,hashCode,isAlive,needServerController,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
+<meta content="Dynamic,com.whirled.contrib.platformer.piece.Dynamic,DEAD,DYN_COUNT,ENEMY,GLOBAL,OWN_ALL,OWN_PLAYER,OWN_SERVER,PLAYER,SPAWN,U_INTER,U_POS,U_VEL,_dx,_dy,_inState,_inter,_owner,id,sprite,updateState,x,y,dx,dy,enemyCount,inter,owner,alwaysSpawn,amOwner,equals,fromBytes,getBounds,hashCode,isAlive,needServerController,ownerType,shouldSpawn,toBytes,xmlInstance" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Dynamic</title>
 </head>
 <body>
@@ -139,6 +139,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#Dynamic()">Dynamic</a>(insxml:XML = null)</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Dynamic</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#alwaysSpawn()">alwaysSpawn</a>():Boolean</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Dynamic</td>
 </tr>
@@ -462,10 +469,26 @@ showHideInherited();
 </div>
 <a name="methodDetail"></a>
 <div class="detailSectionHeader">Method detail</div>
+<a name="alwaysSpawn()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">alwaysSpawn</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function alwaysSpawn():Boolean</code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
+</tr>
+</table>
+</div>
 <a name="amOwner()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">amOwner</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+<td class="detailHeaderName">amOwner</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
