--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/MainLoop.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/MainLoop.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="MainLoop,com.whirled.contrib.simplegame.MainLoop,TRANSITION_CHANGE,TRANSITION_INSERT,TRANSITION_PUSH,TRANSITION_REMOVE,TRANSITION_UNWIND,_fps,_hasSetup,_hostSprite,_keyDispatcher,_lastTime,_modeStack,_pendingModeTransitionQueue,_running,_updatables,g_instance,elapsedSeconds,fps,instance,topMode,addUpdatable,changeMode,createModeTransition,handleModeTransitions,insertMode,onKeyDown,onKeyUp,popAllModes,popMode,pushMode,removeMode,removeUpdatable,reset,run,setup,shutdown,stop,unwindToMode,update" name="keywords">
+<meta content="MainLoop,com.whirled.contrib.simplegame.MainLoop,TRANSITION_CHANGE,TRANSITION_INSERT,TRANSITION_PUSH,TRANSITION_REMOVE,TRANSITION_UNWIND,_ctx,_fps,_hasSetup,_hostSprite,_keyDispatcher,_lastTime,_modeStack,_pendingModeTransitionQueue,_running,_updatables,elapsedSeconds,fps,topMode,addUpdatable,changeMode,createModeTransition,handleModeTransitions,insertMode,onKeyDown,onKeyUp,popAllModes,popMode,pushMode,removeMode,removeUpdatable,reset,run,setup,shutdown,stop,unwindToMode,update" name="keywords">
 <title>com.whirled.contrib.simplegame.MainLoop</title>
 </head>
 <body>
@@ -61,11 +61,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#instance">instance</a> : <a href="../simplegame/MainLoop.html">MainLoop</a>
-<div class="summaryTableDescription">[static][read-only]</div>
-</td><td class="summaryTableOwnerCol">MainLoop</td>
-</tr>
-<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#topMode">topMode</a> : <a href="../simplegame/AppMode.html">AppMode</a>
 <div class="summaryTableDescription">[read-only]
      Returns the top mode on the mode stack, or null
@@ -82,12 +77,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_fps">_fps</a> : Number = 0<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_ctx">_ctx</a> : <a href="../simplegame/SGContext.html">SGContext</a>
+<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#g_instance">g_instance</a> : <a href="../simplegame/MainLoop.html">MainLoop</a>
-<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_fps">_fps</a> : Number = 0<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
 <tr class="">
@@ -134,7 +129,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#MainLoop()">MainLoop</a>(hostSprite:Sprite, keyDispatcher:IEventDispatcher = null)</div>
+<a class="signatureLink" href="#MainLoop()">MainLoop</a>(ctx:<a href="SGContext.html">SGContext</a>, hostSprite:Sprite, keyDispatcher:IEventDispatcher = null)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">MainLoop</td>
 </tr>
@@ -330,10 +325,19 @@ showHideInherited();
 <div class="MainContent">
 <a name="propertyDetail"></a>
 <div class="detailSectionHeader">Property detail</div>
+<a name="_ctx"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_ctx</td><td class="detailHeaderType">property</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _ctx:<a href="../simplegame/SGContext.html">SGContext</a></code>
+</div>
 <a name="elapsedSeconds"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
-<td class="detailHeaderName">elapsedSeconds</td><td class="detailHeaderType">property</td>
+<td class="detailHeaderName">elapsedSeconds</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
 </tr>
 </table>
 <div class="detailBody">
@@ -366,15 +370,6 @@ showHideInherited();
 <code>&nbsp;&nbsp;&nbsp;&nbsp;public function get fps():Number</code>
 <br>
 </div>
-<a name="g_instance"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">g_instance</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>protected static var g_instance:<a href="../simplegame/MainLoop.html">MainLoop</a></code>
-</div>
 <a name="_hasSetup"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -392,18 +387,6 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _hostSprite:Sprite</code>
-</div>
-<a name="instance"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">instance</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>instance:<a href="../simplegame/MainLoop.html">MainLoop</a></code>&nbsp;&nbsp;[read-only]<span class="label">Implementation</span>
-<br>
-<code>&nbsp;&nbsp;&nbsp;&nbsp;public static function get instance():<a href="../simplegame/MainLoop.html">MainLoop</a></code>
-<br>
 </div>
 <a name="_keyDispatcher"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -483,8 +466,14 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function MainLoop(hostSprite:Sprite, keyDispatcher:IEventDispatcher = null)</code><span class="label">Parameters</span>
+<code>public function MainLoop(ctx:<a href="SGContext.html">SGContext</a>, hostSprite:Sprite, keyDispatcher:IEventDispatcher = null)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">ctx</span>:<a href="SGContext.html">SGContext</a></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">hostSprite</span>:Sprite</code></td>
 </tr>
