--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/audio/AudioManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/audio/AudioManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="AudioManager,com.whirled.contrib.simplegame.audio.AudioManager,DEFAULT_AUDIO_STATE,LOOP_FOREVER,SOUND_PLAYED_RECENTLY_DELTA,_channels,_freeChannelIds,_masterControls,_soundTypeControls,g_instance,log,instance,masterControls,createChannelCompleteHandler,getControlsForSoundType,handleComplete,pause,playChannel,playSound,playSoundNamed,resume,shutdown,stop,stopAllSounds,update" name="keywords">
+<meta content="AudioManager,com.whirled.contrib.simplegame.audio.AudioManager,DEFAULT_AUDIO_STATE,LOOP_FOREVER,SOUND_PLAYED_RECENTLY_DELTA,_channels,_ctx,_freeChannelIds,_masterControls,_soundTypeControls,log,masterControls,createChannelCompleteHandler,getControlsForSoundType,handleComplete,pause,playChannel,playSound,playSoundNamed,resume,shutdown,stop,stopAllSounds,update" name="keywords">
 <title>com.whirled.contrib.simplegame.audio.AudioManager</title>
 </head>
 <body>
@@ -37,6 +37,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr>
 <td class="classHeaderTableLabel">Class</td><td class="classSignature">public class AudioManager</td>
 </tr>
+<tr>
+<td class="classHeaderTableLabel">Implements</td><td><a href="../Updatable.html">Updatable</a></td>
+</tr>
 </table>
 <p></p>
 <p></p>
@@ -49,11 +52,6 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableProperty" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
-</tr>
-<tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#instance">instance</a> : <a href="../audio/AudioManager.html">AudioManager</a>
-<div class="summaryTableDescription">[static][read-only]</div>
-</td><td class="summaryTableOwnerCol">AudioManager</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#masterControls">masterControls</a> : <a href="../audio/AudioControls.html">AudioControls</a>
@@ -74,12 +72,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">AudioManager</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_freeChannelIds">_freeChannelIds</a> : Array<div class="summaryTableDescription"></div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_ctx">_ctx</a> : <a href="../../simplegame/SGContext.html">SGContext</a>
+<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">AudioManager</td>
 </tr>
 <tr class="">
-<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#g_instance">g_instance</a> : <a href="../audio/AudioManager.html">AudioManager</a>
-<div class="summaryTableDescription">[static]</div>
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_freeChannelIds">_freeChannelIds</a> : Array<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">AudioManager</td>
 </tr>
 <tr class="">
@@ -107,7 +105,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#AudioManager()">AudioManager</a>(maxChannels:int = 25)</div>
+<a class="signatureLink" href="#AudioManager()">AudioManager</a>(ctx:<a href="../SGContext.html">SGContext</a>, maxChannels:int = 25)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">AudioManager</td>
 </tr>
@@ -256,6 +254,15 @@ showHideInherited();
 <div class="detailBody">
 <code>protected var _channels:Array</code>
 </div>
+<a name="_ctx"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_ctx</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _ctx:<a href="../../simplegame/SGContext.html">SGContext</a></code>
+</div>
 <a name="_freeChannelIds"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -264,27 +271,6 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _freeChannelIds:Array</code>
-</div>
-<a name="g_instance"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">g_instance</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>protected static var g_instance:<a href="../audio/AudioManager.html">AudioManager</a></code>
-</div>
-<a name="instance"></a>
-<table cellspacing="0" cellpadding="0" class="detailHeader">
-<tr>
-<td class="detailHeaderName">instance</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
-</tr>
-</table>
-<div class="detailBody">
-<code>instance:<a href="../audio/AudioManager.html">AudioManager</a></code>&nbsp;&nbsp;[read-only]<span class="label">Implementation</span>
-<br>
-<code>&nbsp;&nbsp;&nbsp;&nbsp;public static function get instance():<a href="../audio/AudioManager.html">AudioManager</a></code>
-<br>
 </div>
 <a name="log"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -334,8 +320,14 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function AudioManager(maxChannels:int = 25)</code><span class="label">Parameters</span>
+<code>public function AudioManager(ctx:<a href="../SGContext.html">SGContext</a>, maxChannels:int = 25)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">ctx</span>:<a href="../SGContext.html">SGContext</a></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">maxChannels</span>:int</code> (default = <code>25</code>)<code></code></td>
 </tr>
