--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/resource/ImageResource.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/resource/ImageResource.html
@@ -116,7 +116,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#instantiateBitmap()">instantiateBitmap</a>(resourceName:String):Bitmap</div>
+<a class="signatureLink" href="#instantiateBitmap()">instantiateBitmap</a>(rsrcs:<a href="ResourceManager.html">ResourceManager</a>, resourceName:String):Bitmap</div>
 <div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol">ImageResource</td>
 </tr>
@@ -293,8 +293,14 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public static function instantiateBitmap(resourceName:String):Bitmap</code><span class="label">Parameters</span>
+<code>public static function instantiateBitmap(rsrcs:<a href="ResourceManager.html">ResourceManager</a>, resourceName:String):Bitmap</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">rsrcs</span>:<a href="ResourceManager.html">ResourceManager</a></code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">resourceName</span>:String</code></td>
 </tr>
